# server/src/projects/routes/strings.ts
@@ -1,35 +1,0 @@
-import z from 'zod';
-import { describeRoute, resolver, validator } from 'hono-openapi';
-
-import type { HonoContext } from '../../context';
-import { OPENAPI_TAG } from '../constants';
-
-type StringsParams = z.infer<typeof StringsParamsSchema>;
-
-type StringsInput = { out: { param: StringsParams } };
-
-const StringsParamsSchema = z.object({ projectId: z.string(), versionId: z.string() });
-
-const StringsResponseSchema = z.object({});
-
-const stringsRoute = [
-  '/:projectId/v/:versionId/strings',
-  describeRoute({
-    description: 'Get strings',
-    tags: [OPENAPI_TAG],
-    responses: {
-      200: {
-        description: 'Successful response',
-        content: {
-          'application/json': { schema: resolver(StringsResponseSchema) },
-        },
-      },
-    },
-  }),
-  validator('param', StringsParamsSchema),
-  (c: HonoContext<StringsInput>) => {
-    return c.json({});
-  },
-] as const;
-
-export default stringsRoute;
